<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btnPrevText"></Button>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btnNextText"></Button>
    </LinearLayout>
    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CCFFCC">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:layout_margin="50dp"
                    android:text="@string/nougat"
                    android:textAlignment="center"
                    android:textSize="40sp"></TextView>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:layout_margin="50dp"
                    android:text="@string/oreo"
                    android:textAlignment="center"
                    android:textSize="40sp"></TextView>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:layout_margin="50dp"
                    android:text="@string/pie"
                    android:textAlignment="center"
                    android:textSize="40sp"></TextView>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:layout_margin="50dp"
                    android:text="@string/android_q"
                    android:textAlignment="center"
                    android:textSize="40sp"></TextView>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:layout_margin="50dp"
                    android:text="@string/android_r"
                    android:textAlignment="center"
                    android:textSize="40sp"></TextView>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFAA"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:src="@drawable/bird"
                android:layout_gravity="center"></ImageView>
        </LinearLayout>

    </ViewFlipper>

</LinearLayout>